syntax = "proto3";

import "google/protobuf/empty.proto";
import "v1/misc/common.proto";

package v1.csi_node_nvme;

message NvmeConnectRequest {
  string uri = 1;
  common.MapWrapper publish_context = 2;
}

// chosen enum variant values to match these values as TrType in nvmeadm.
enum TrType {
  Invalid = 0;
  Rdma = 1;
  Fc = 2;
  Tcp = 3;
}

message NvmeConnectResponse {
  optional TrType transport_used = 1;
}

service NvmeOperations {
  rpc NvmeConnect(NvmeConnectRequest) returns (NvmeConnectResponse) {}
}